--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "animate-scss": "^3.2.1",
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "bulma": "^0.9.0",
     "eslint-plugin-react": "^7.21.2",
