--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "eslint-plugin-react": "^7.21.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.0.2",
     "swiper": "^6.3.2",
     "vanilla-tilt": "^1.7.0"
