Added background color change with scroll, skills section and down arrows between sections

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,10 @@
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
     "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.0.2",
+    "scroll-background": "^1.0.5",
     "swiper": "^6.3.2",
     "vanilla-tilt": "^1.7.0"
   },
