--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "bulma": "^0.9.0",
     "eslint-plugin-react": "^7.21.2",
+    "moving-letters": "^1.0.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-awesome-slider": "^4.1.0",
